frame/support/test/tests/pallet_ui/storage_result_query_multiple_type_args.stderr
error: Invalid pallet::storage, unexpected number of generic arguments for ResultQuery, expected 1 ident representing a pallet enum error variant name, found 2
  --> tests/pallet_ui/storage_result_query_multiple_type_args.rs:19:56
   |
19 |     type Foo<T: Config> = StorageValue<_, u8, ResultQuery<NonExistentValue, SomeOtherError>>;
   |                                                           ^^^^^^^^^^^^^^^^
